source/objects/Bluescape_PKB__c/Bluescape_PKB__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Bluescape PKB menu URLs</description>
    <label>Bluescape PKB</label>
</CustomObject>