source/objects/Bluescape_PKB__c/fields/Pkb_bluescape_Tv__c.field-meta.xml
<CustomField>
    <fullName>Pkb_bluescape_Tv__c</fullName>
    <label>Pkb bluescape Tv</label>
    <length>200</length>
    <type>Text</type>
</CustomField>