source/objects/Bluescape_PKB__c/fields/Pkb_Chat__c.field-meta.xml
<CustomField>
    <fullName>Pkb_Chat__c</fullName>
    <label>Pkb_Chat</label>
    <type>Url</type>
</CustomField>