source/objects/Bluescape_PKB__c/fields/Pkb_community_home__c.field-meta.xml
<CustomField>
    <fullName>Pkb_community_home__c</fullName>
    <label>Pkb community home</label>
    <length>200</length>
    <type>Text</type>
</CustomField>