source/objects/Bluescape_PKB__c/fields/Pkb_discussion__c.field-meta.xml
<CustomField>
    <fullName>Pkb_discussion__c</fullName>
    <label>Pkb discussion</label>
    <length>200</length>
    <type>Text</type>
</CustomField>