source/objects/Bluescape_PKB__c/fields/Pkb_ideas__c.field-meta.xml
<CustomField>
    <fullName>Pkb_ideas__c</fullName>
    <label>Pkb ideas</label>
    <length>200</length>
    <type>Text</type>
</CustomField>