source/objects/Bluescape_PKB__c/fields/Pkb_issues__c.field-meta.xml
<CustomField>
    <fullName>Pkb_issues__c</fullName>
    <label>Pkb issues</label>
    <length>200</length>
    <type>Text</type>
</CustomField>