source/objects/Bluescape_PKB__c/fields/Pkb_knowledge__c.field-meta.xml
<CustomField>
    <fullName>Pkb_knowledge__c</fullName>
    <label>Pkb knowledge</label>
    <length>200</length>
    <type>Text</type>
</CustomField>